--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "alpha_blog_app",
-  "version": "1.0.0",
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
+  "name": "app",
+  "private": true,
+  "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/webpacker": "^6.0.0-rc.6",
+    "babel-plugin-macros": "^2.0.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "webpack": "^5.53.0",
+    "webpack-cli": "5.1.4"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "CI='' npm run build"
+  "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "browserslist": [
+    "defaults"
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@webpack-cli/serve": "^2.0.5",
+    "webpack-dev-server": "^4.15.1"
+  }
 }
